--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link
       id="favicon"
       rel="icon"
-      type="image/png"
-      href="./styles/ai.png"
+      type="image/svg+xml"
+      href="./styles/ai.svg"
       sizes="400x400"
     />
     <title>powered by HI</title>
